--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Etherial-h"
 title_separator          : "-"
 name                     : &name "Yue Huang"
-description              : &description "undergraduate, School of Computer Science and Engineering, Sun Yat-sen University"
+description              : &description "Graduate, School of Computer Science and Engineering, Sun Yat-sen University"
 url                      : https://etherial-h.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "etherial-h/etherial-h.github.io"
