--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yue Huang"
   avatar           : "profile.png"
-  bio              : "Undergraduate, School of Computer Science and Engineering, Sun Yat-sen University"
+  bio              : "Graduate, School of Computer Science and Engineering, Sun Yat-sen University"
   location         : "Guangzhou"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
